# backend_server

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: run_server.sh
server/: __init__.py  __main__.py  config.py  permissions.py  utils.py
server/canvas/: canvas_action.py  canvas_session.py  canvas_store.py  constants.py
server/canvas/actions/: action_factory.py  actions.py
server/conference/: __init__.py  action.py  canvas.py  canvas_store.py  conference.py  conference_controller.py  conference_manager.py  conference_session.py  conference_sessions_pool.py  conferences_pool.py  constants.py  exceptions.py  member.py  member_connections.py  messages.py  types.py
server/conference/actions/: action_encoding.py  action_factory.py  actions.py
server/conference/message_coding/: __init__.py  base_message_coder.py  base_message_coding.py  json_message_coder.py  json_message_coding.py
server/database/: db_context.py  db_settings.py
server/database/entities/: users.py
server/database/migrations/: alembic.ini
server/database/migrations/alembic/: env.py
server/database/migrations/alembic/versions/: 13ece65ab94e_initial.py
server/database/models/: entity_like.py  users.py
server/database/repo/: __init__.py  base_repo_module.py  exceptions.py  users.py
server/database/schemas/: users.py
server/debug/: conference_debug.py
server/domains/: authentication.py  authentification.py  canvas.py  conferences.py  login.py  registration.py  users.py
server/routers/: login.py  users.py
